# cliap

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md
examples/basic_usage/: CMakeLists.txt  main.cpp
include/cliap/: arg.h  cliap.h  parser.h
src/: parser.cpp
test/: CMakeLists.txt  cliap_test.cpp
